Access control en el controller :)

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,5 +33,6 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/new, roles: ROLE_USER}
-        - { path: ^/create, roles: ROLE_USER}
+      #Access control en el controller :)
+      #  - { path: ^/new, roles: ROLE_ADMIN}
+      #  - { path: ^/create, roles: ROLE_USER}
