--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "ircmaxell/password-compat": "^1.0"
 
     },
     "require-dev": {
