--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,7 @@ login_check:
   defaults: {_controller: UserBundle:Security:loginCheck}
 logout:
     path: /logout
+
+register_form:
+  path: /register/
+  defaults: {_controller: UserBundle:Register:register}
