Añadido botón para confirmar o quitar la asistencia a una fiesta

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,3 +17,7 @@ logout:
 register_form:
   path: /register/
   defaults: {_controller: UserBundle:Register:register}
+
+attend:
+  path: /{id}/attend
+  defaults: {_controller: "EventBundle:Event:attend"}
